# augmento

./: LICENSE.txt  README.md  __init__.py  main.py  requirements.txt  setup.cfg  setup.py
augmentations/: __init__.py  affine.py  colors.py  flipper.py  resizer.py  rotator.py
src/augmento/: __init__.py
src/augmento/augmentations/: colors.py  rotator.py
tests/: test_color_jitter.py
