[metadata]
name = package-name
version = 0.0.1
author = Syed Muhammad Asad
author_email = asdkazmi@gmail.com
description = Augmento is a Python library that provides a collection of image augmentation techniques for machine learning applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rev9ai/augmento
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src